--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "lurlparser.cxx",
-  "version": "1.1.0",
+  "version": "1.1.1",
   "description": "Lightweight URL & URI parser (RFC 1738, RFC 3986); Sergey Kosarevsky (2015).",
   "keywords": [
     "c",
@@ -21,5 +21,9 @@
     "url": "git+https://github.com/nodef/lurlparser.cxx.git"
   },
   "license": "MIT",
-  "main": "lurlparser.h"
+  "author": "wolfram77@gmail.com",
+  "main": "lurlparser.h",
+  "scripts": {
+    "test": "bash build.sh test"
+  }
 }
